Fixed Docker-Compose tty issue with version >= 3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     ports:
       - 5000:5000
   chocolate-mint-client:
+    tty: true
     build: ./client
     ports:
       - 4000:4000
